# assinador

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: release.yml
crates/assinador/: Cargo.toml  README.md
crates/assinador-server/: Cargo.toml
crates/assinador-server/src/: app.rs  error.rs  handlers.rs  lib.rs  main.rs
crates/assinador-server/tests/: auth_flow.rs  health.rs  sign_flow.rs
crates/assinador/src/: adapter.rs  client.rs  config.rs  dispatcher.rs  error.rs  lib.rs  pkce.rs  port.rs  signer.rs
docs/: rust-learning-notes.md
docs/superpowers/plans/: 2026-06-21-assinador-vidaas-signing-crate.md
docs/superpowers/specs/: 2026-06-21-assinador-vidaas-signing-crate-design.md
scripts/: smoke_test.py
