[package]
name = "assinador-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
name = "assinador_server"
path = "src/lib.rs"

[[bin]]
name = "assinador-server"
path = "src/main.rs"

[dependencies]
assinador = { path = "../assinador" }
axum = "0.8"
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
tracing.workspace = true
tracing-subscriber = "0.3"

[dev-dependencies]
wiremock.workspace = true
reqwest.workspace = true
