[package]
name = "assinador"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Assinatura digital de PDFs via VIDaaS (ICP-Brasil)."

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true
base64.workspace = true
sha2.workspace = true
rand.workspace = true
reqwest.workspace = true

[dev-dependencies]
tokio.workspace = true
wiremock.workspace = true
